force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/Form_Field_Definition__c.object-meta.xml
<CustomObject>
    <label>Form Field Definition</label>
    <pluralLabel>Form Field Definitions</pluralLabel>
    <nameField>
        <label>Field Def Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Field-level metadata extracted from the uploaded form</description>
</CustomObject>