force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Proposed API name</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>