force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Field label from form</description>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>