force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Detected field type</description>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Text</fullName><label>Text</label></value>
            <value><fullName>TextArea</fullName><label>TextArea</label></value>
            <value><fullName>Number</fullName><label>Number</label></value>
            <value><fullName>Date</fullName><label>Date</label></value>
            <value><fullName>DateTime</fullName><label>DateTime</label></value>
            <value><fullName>Checkbox</fullName><label>Checkbox</label></value>
            <value><fullName>Radio</fullName><label>Radio</label></value>
            <value><fullName>Picklist</fullName><label>Picklist</label></value>
            <value><fullName>MultiPicklist</fullName><label>MultiPicklist</label></value>
            <value><fullName>Signature</fullName><label>Signature</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>