force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <description>Parent template</description>
    <label>Form Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Field Definitions</relationshipLabel>
    <relationshipName>Field_Definitions</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>