force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Layout height (pixels)</description>
    <label>Height</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>