force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Help text/instructions</description>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>