force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <description>Whether the field is required</description>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>