force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Options_JSON__c.field-meta.xml
<CustomField>
    <fullName>Options_JSON__c</fullName>
    <description>Picklist/Radio options JSON</description>
    <label>Options JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>