force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <description>Page number where field appears</description>
    <label>Page Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>