force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Position_X__c.field-meta.xml
<CustomField>
    <fullName>Position_X__c</fullName>
    <description>Layout X position (pixels)</description>
    <label>Position X</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>