force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Position_Y__c.field-meta.xml
<CustomField>
    <fullName>Position_Y__c</fullName>
    <description>Layout Y position (pixels)</description>
    <label>Position Y</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>