force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>Logical section grouping</description>
    <label>Section Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>