force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rules__c</fullName>
    <description>Validation rules or regex patterns</description>
    <label>Validation Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>