force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Field_Definition__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Layout width (pixels)</description>
    <label>Width</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>